# 01-rag-document-chat

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: chunking.py  config.py  embeddings.py  generate.py  ingest.py  main.py  retrieve.py  schemas.py  vector_store.py
backend/tests/: test_api.py  test_generate.py  test_ingest.py  test_retrieve.py
docs/: architecture.md
examples/: README.md  grace_hopper.txt  paris_landmarks.txt  rag_intro.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  SourcesPanel.tsx  UploadPanel.tsx
screenshots/: README.md
