[project]
name = "rag-document-chat-backend"
version = "0.1.0"
description = "RAG document chat backend - FastAPI service for ingest, retrieval, and grounded generation with Anthropic Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pypdf>=5.1.0",
    "sentence-transformers>=3.3.0",
    "chromadb>=0.5.20",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
